# pincol

./: Cargo.toml  README.md
src/: lib.rs
src/linked_list/: list_.rs  mod.rs  slot_.rs
